--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
         max-width: 40%;
         color: white;
       }
-      .des > h1 {
+      .desc > h1 {
         font-size: xx-large;
         margin-bottom: 30px;
       }
